Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45423

Repeater does not create items in the correct stacking order.

XMLWordPrintable

    • 55dc72f8cf47c6b32c1f172f4dffcd5a3bc743e6

      If you modify a Repeater's model property from 1 to 2 (the count variant) and so forth, the items are not in their correct stacking order when they are completed.

      The stacking order is not correct until the call to setModel has been completed.

      If you run the following example you will see (from the console output) that the "yellow" rectangles are sometimes stacked on top of the blue rectangle, that is supposed to be on top.

      I would expect that the stacking order should be in a consistent state when the items are completed.

      This prevents us from fixing issues such as QTBUG-45152

        1. main2.qml
          2 kB
          Jan Arve
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            smd Jan Arve
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes